crates/tests/libs/bindgen/data/error/unknown_property/input.rdl

#[winrt]
mod Test {
    attribute FooAttribute { fn(); version: u32, }

    #[Foo(unknown = 42)]
    class MyClass {}
}
        